# jaffle_shop_add_dbt_project_test

./: dagster_cloud.yaml  dagster_cloud_pre_install.sh
.github/workflows/: branch_deployments.yml  deploy.yml
jaffle_shop_add_dbt_project_test/: dagster_cloud_post_install.sh  dagster_cloud_pre_install.sh  pyproject.toml  setup.py
